css/forms.css
.main {
  /* height: 100vh; */
  align-items: center;
  min-height: 100vh;
  background-color: var(--fg2);
}

.login {
  padding: 20px;
  gap: 20px;
  width: 60%;
  max-width: 600px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.form__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  gap: 20px;
  min-width: 300px;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.form__input {
  display: flex;
  padding: 10px;
  border-radius: 5px;
  background-color: var(--bg);
  color: #fff;
  outline: none;
  border: none;
  width: 100%;
  max-width: 500px;
}

.form textarea {
  width: 100%;
  height: 100px;
  resize: none;
}

.form__check {
  align-self: start;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  color: var(--fg1);
  gap: 10px;
}

.form__check .checkbox {
  height: 18px;
  /* vertical-align: middle; */
  width: 18px;
}

.input {
  padding: 0 0 0 15px;
  background-color: var(--bg);
  border: none;
  outline: none;
  color: var(--fg1);
}

i.fas {
  color: var(--bg2);
}

.form__brand {
  /* padding: 50px; */
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 220px;
}

.form__brand img {
  width: 40%;
}

.form__brand-name {
  font-size: 2rem;
  font-family: Montserrat, sans-serif;
  font-weight: 600;
  color: var(--fg1);
}

.container__title {
  color: var(--fg1);
  font-weight: 300;
}

.form__container p {
  color: var(--fg1);
}

.form__container a {
  margin: 0 5px;
  color: var(--bg-btn)
}

.btn--form {
  position: absolute;
  left: 4vw;
  top: 4vh;
}

.feedback-modal-user {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  /* align-self: flex-end; */
  text-align: center;
  margin: 0 auto;
  top: 0;
  /* right: 5%; */
  padding: 5px 20px;
  border-radius: 0px 0 5px 5px;
  position: absolute;
  height: calc(45px + 1vw);
  width: 80%;
  max-width: 700px;
  box-shadow: rgba(0, 0, 0, 0.355) 0px 13px 27px -5px, rgba(0, 0, 0, 0.461)  0px 8px 16px -8px;
  /* z-index: -2; */
  left: 50%;
  transform: translate(-50%, -400%);
}

